#ifndef SHADER_H
#define SHADER_H
#include <string>  
#include <iostream>  
#include <fstream>  
#include <sstream>  
#include "glad/glad.h"  
#include "GLFW/glfw3.h"  
#include "glm/glm.hpp"  
#include "glm/gtc/matrix_transform.hpp"  
#include "glm/gtc/type_ptr.hpp"  

class Shader  
{  
public:  
   unsigned int ID;  
   bool success;  
   Shader();  
   ~Shader();  
   Shader(const char* vertexPath, const char* fragmentPath);  
   Shader(const Shader&) = delete;
   Shader& operator=(const Shader&) = delete;
   void use() const;  
   bool SetInt(const std::string& name, int value) const;  
   bool SetMat4(const std::string& name, glm::mat4 value) const;
   bool SetVec3(const std::string& name, glm::vec3 value) const;
   void PrintAllUniforms() const;

private:  
   bool checkCompileErrors(unsigned int shader, unsigned int type);  
   unsigned int vertexShader, fragmentShader;  
   const char* vertexShaderSource;  
   const char* fragmentShaderSource;
   std::string vname, fname;
   std::string GetSource(const char* path);  
   bool CompilerShader(const char* vertexPath, const char* fragmentPath);
};  

#endif // SHADER_H
